--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,8 +1,9 @@
 .navbar {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-
-  padding: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  max-width: 100%;
 }
 
 .navbar > .navbar-button {
